<resources>
    <string name="app_name">FastLogz</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="off">OFF</string>
    <string name="off_duty">Off-Duty</string>
    <string name="sb">SB</string>
    <string name="sleeper_berth">Sleeper Berth</string>
    <string name="dr">DR</string>
    <string name="driving">Driving</string>
    <string name="on">ON</string>
    <string name="on_duty">ON-Duty</string>
    <string name="previous_log">Previous Log</string>
    <string name="next_log">Next Log</string>
    <string name="change_status">Change Status</string>
    <string name="today">Today</string>
    <string name="recap">RECAP</string>
    <string name="check_all">CHECK ALL</string>
    <string name="main_info">Main Info</string>
    <string name="driver_name">Driver name</string>
    <string name="murad_baratov">Murad Baratov</string>
    <string name="distance">Distance</string>
    <string name="_0_0">0.0</string>
    <string name="shipping_docs">Shipping docs</string>
    <string name="Plus">+</string>
    <string name="vehicles">Vehicles</string>
    <string name="trailers">Trailers</string>
    <string name="carrier">Carrier</string>
    <string name="suncoast_transportation_ilc">Suncoast transportation Ilc</string>
    <string name="_500_houston_texas_77091">500,Houston,Texas,77091</string>
    <string name="home_terminal_address">Home terminal address</string>
    <string name="_500_houston_texas">500,Houston,Texas,...</string>
    <string name="others">Others</string>
    <string name="co_drivers">Co-drivers</string>
    <string name="from">From</string>
    <string name="enter_information">Enter information</string>
    <string name="to">To</string>
    <string name="signature">Signature</string>
    <string name="loads">LOADS</string>
    <string name="upload_documents_now">Upload Documents now</string>
    <string name="upload">Upload</string>
    <string name="create_new_dvir">Create new DVIR</string>
    <string name="create">Create</string>
    <string name="weight_station">Weight Station</string>
    <string name="_1">1</string>
    <string name="_12_00_am_cdt">12:00 AM CDT</string>
    <string name="space">|</string>
    <string name="_5h_45m">5h 45m</string>
    <string name="_20mi_e_grass_valley_ca">20MI E GRASS VALLEY,CA</string>
    <string name="languages">Languages</string>
    <string name="russian">Russian</string>
    <string name="uzbek">Uzbek</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="reset_password">Reset Password</string>
    <string name="_00h_00m">00h 00m</string>
    <string name="inspection_mode">Inspection Mode</string>
    <string name="tap_begin_inspection_and_hand_your_deviceto_the_officer">Tap begin inspection and hand your deviceto the officer</string>
    <string name="begin_inspection">Begin Inspection</string>
    <string name="send_logs_for_previous_7_days_today">Send logs for previous 7 days + today</string>
    <string name="send_eld_output_file_to_dot">Send ELD output file</string>
    <string name="next">Next</string>
    <string name="click_here_to_add_defects">Click here add to Defect</string>
    <string name="time">Time</string>
    <string name="driver_s_daily_log">DRIVER\'S DAILY LOG</string>
    <string name="mm_dd">mm/dd</string>
    <string name="i_certify_that_these_entries_are_true_and_correct">I certify that these entries are true and correct</string>
    <string name="s_signature">SIGNATURE</string>
    <string name="log_reports">Log Reports</string>
    <string name="total_hours_since_restart">Total Hours Since Restart</string>
    <string name="hrs_available_today">Hrs Available Today</string>
    <string name="hrs_worked_today">Hrs Worked Today</string>
    <string name="send_logs">Send Logs</string>
    <string name="create_edit_dvir">Create/Edit DVIR</string>
    <string name="unit">Unit</string>
    <string name="enter_recepient_e_mail">Enter recepient E-mail</string>
    <string name="selected_trailers">Selected trailers</string>
    <string name="no_defect_detected">No defect detected</string>
    <string name="content_description">Just Image</string>
    <string name="defects">Defects</string>
    <string name="driver_singature">Driver Singature</string>
    <string name="no_defects">No defects</string>
    <string name="above_defects_need_to_be_corrected">Above defects need to be corrected</string>
    <string name="above_defects_corrected">Above defects corrected</string>
    <string name="use_previous_signature">Previous signature</string>
    <string name="clear_signature">Clear signature</string>
    <string name="save_signature">Save</string>
    <string name="send_email">Send Email</string>
    <string name="email_address">Email address</string>
    <string name="send">Send</string>
    <string name="unit_defects">Unit Defects</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bluetooth_not_work">Bluetooth is off</string>
    <string name="you_want_to_turn_on">Do you want to turn on?</string>
    <string name="draw_your_signature">Signature</string>
    <string name="trailer_defects">Trailer Defects</string>
    <string name="mechanic_signature">Mechanic Signature</string>
    <string name="vehicle" translatable="false">Vehicle :</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State/Province</string>
    <string name="select_state_province">Select State/Province</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="cancel">Cancel</string>
    <string name="enter_main_office_address">Enter main office address</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="no_dvir">No DVIR</string>
    <string name="dvir">DVIR</string>
    <string name="hos_recap">Hos Recap</string>
    <string name="worked_today">Worked Today</string>
    <string name="avaible_today">Avaible Today</string>
    <string name="avaible_tomorrow">Avaible Tomorrow</string>
    <string name="shift_restart">Shift Restart</string>
    <string name="cycle_restart">Cycle Restart</string>
    <string name="done">Done</string>
    <string name="rest_break">Break</string>
    <string name="exclude_split_in_shift">Exclude Split in Shift</string>
    <string name="until_rest_break">Until Rest Break</string>
    <string name="cycle">Cycle</string>
    <string name="shift">Shift</string>
    <string name="drive">Drive</string>
    <string name="weekdays">Weekdays</string>
    <string name="day">Day</string>
    <string name="recent_statuses">Recent statuses</string>
    <string name="add_notes">Add notes</string>
    <string name="notes">Notes</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location</string>
    <string name="dr_with_exeption">DR with exception</string>
    <string name="document">Document</string>
    <string name="attach">Attach</string>
    <string name="save">Save</string>
    <string name="none">None</string>
    <string name="current_status">Current status</string>
    <string name="main_office">Main office</string>
    <string name="night_mode">Night Mode</string>
    <string name="settings">Settings</string>
    <string name="hos_rules">HOS Rules</string>
    <string name="account">Account</string>
    <string name="edit_profile">Profile</string>
    <string name="carrier_connect">Carrier Connect</string>
    <string name="inspection_mode_lock">Inspection mode Lock</string>
    <string name="privacy">Privacy</string>
    <string name="basic_rules">Basic Rules</string>
    <string name="logbook">Logbook</string>
    <string name="time_is_all_time_from_when_a_driver_begins_to_work_including_time_for_fueling_ptis_scale_repairs_drop_and_hook_dot_inspection_loading_unloading_and_others">Time is all time from when a driver begins to work, including time for Fueling, PTIs, Scale, Repairs, Drop and Hook, DOT inspection, Loading, Unloading, and others.</string>
    <string name="time_is_any_amount_of_time_spent_inside_of_the_sleeper_berth_e_g_resting_or_sleeping">Time is any amount of time spent inside of the sleeper berth (e.g., resting or sleeping ;)</string>
    <string name="time_is_all_time_spent_at_the_driving_controls_of_a_cmv">Time is all time spent at the driving controls of a CMV.</string>
    <string name="time_is_any_time_not_spent_on_duty_driving_or_in_the_sleeper_berth_when_you_are_not_in_the_truck">Time is any time not spent on-duty, driving, or in the sleeper berth when you are not in the truck.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="review_logs_for_previous_7_days_today">Review logs for previous 7 days + today</string>
    <string name="in_motion">In motion</string>
    <string name="new_shipping_document">New shipping document:</string>
    <string name="please_enter_new_shipping_document">Please,enter new shipping document:</string>
    <string name="new_trailer">New Trailer</string>
    <string name="please_enter_new_trailer">Please, enter new trailer</string>
    <string name="select_unit">Select Vehicle</string>
    <string name="add_trailer">Add Trailer</string>
    <string name="create_trailer">Create Trailer</string>
    <string name="last_8_days">Previous Days</string>
    <string name="select_co_driver">Select Co-driver</string>
    <string name="connect">CONNECT</string>
    <string name="delete_dvir">Delete Dvir</string>
    <string name="do_you_want_to_delete_dvir">Do you want to delete Dvir?</string>
    <string name="do_you_log_out">Do you want to Log out?</string>
    <string name="select_trailer">Select Trailer</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="ok">OK</string>
    <string name="add_a_note_to_your_defect">Add a note to your defect</string>
    <string name="add_note_here">Add note here</string>
    <string name="whould_you_like_to_change_your_status">Whould you like to change your status?</string>
    <string name="stay_on_driving">Stay on Driving</string>
    <string name="go_off_duty">Go OFF DUTY</string>
    <string name="trailer">Trailers :</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="current_location">Current Location</string>
    <string name="auto_switch">Auto Switch</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="name">Name</string>
    <string name="main_office_address">Main Office Address</string>
    <string name="city">City</string>
    <string name="texas">Texas</string>
    <string name="personal_conveyance">Personal Conveyance</string>
    <string name="driving_will_be_recorded_as_off_duty">Driving will be recorded as Off Duty</string>
    <string name="yard_move">Yard Move</string>
    <string name="driving_will_be_recorded_as_on_duty">Driving will be recorded as On Duty</string>
    <string name="off_pc">OFF(PC)</string>
    <string name="on_ym">ON(YM)</string>
    <string name="numbers">#</string>
    <string name="start_edt">Start(EDT)</string>
    <string name="duration">Duration</string>
</resources>