<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBgViewColor"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/idAppbar"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/idImageBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/fragment_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/idTextFrag"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/idAppbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/idAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@drawable/background_main_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textStyle="bold"
            android:textSize="19sp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            app:drawableLeftCompat="@drawable/ic_abstract_user_flat_1" />

        <TextView
            android:id="@+id/idEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/idCarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrier"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/idCarrierConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrier_connect"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idAccountLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_main_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textStyle="bold"
            android:textSize="19sp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            app:drawableLeftCompat="@drawable/ic__others" />

        <TextView
            android:id="@+id/idInspectionModeLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspection_mode_lock"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/idNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/idLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/idPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/customTextHintColor"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>