<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:padding="20dp"
    android:background="?attr/customBgColor"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Home Terminal"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="?attr/customTextColor"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/idinformationEdit"
        android:hint="@string/enter_information"
        android:textSize="14sp"
        android:paddingBottom="15dp"
        android:layout_margin="10dp"
        android:textColor="?attr/customTextColor"
        android:textColorHint="?attr/customTextHintColor"
        android:backgroundTint="?attr/customTextHintColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <EditText
        android:id="@+id/idCityEdit"
        android:hint="@string/enter_city"
        android:textSize="14sp"
        android:paddingBottom="15dp"
        android:layout_margin="10dp"
        android:textColor="?attr/customTextColor"
        android:textColorHint="?attr/customTextHintColor"
        android:backgroundTint="?attr/customTextHintColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/idSelectStateText"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/select_state_province"
        android:textColor="?attr/customTextColor"
        app:drawableEndCompat="@drawable/keyboard_bottom_arrow" />

    <View
        android:layout_width="match_parent"
        android:background="#CB636363"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idZipEdit"
        android:hint="@string/enter_zip"
        android:textSize="14sp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/customTextColor"
        android:textColorHint="?attr/customTextHintColor"
        android:backgroundTint="?attr/customTextHintColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idCancelText"
            android:padding="10dp"
            android:textColor="#03A9F4"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idSaveText"
            android:padding="10dp"
            android:textColor="#03A9F4"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>