<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="?attr/customBgColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/weekdays"
            android:id="@+id/idRecapWeek"
            android:textColor="?attr/customTextHintColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/day"
            android:textSize="15sp"
            android:id="@+id/idRecapDay"
            android:textColor="?attr/customTextHintColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="?attr/customBgViewColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/_00h_00m"
            android:id="@+id/idRecapTime"
            android:textColor="?attr/customTextHintColor"/>

    </LinearLayout>

</LinearLayout>