<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:padding="25dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_marginVertical="30dp"/>


    <EditText
        android:id="@+id/idEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textStyle="bold"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:textColorHint="#DF575454"
        android:textColor="#000000"
        android:paddingBottom="20dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/idEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textStyle="bold"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textColorHint="#DF575454"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/idLoginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_bg_login"
        android:text="@string/log_in"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"/>


</LinearLayout>