<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/background_main_view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idHeaderTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/customViewColor"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/idSelectTrailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_trailer"
            android:textSize="17sp"
            android:textColor="?attr/customTextHintColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/idAddTrailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trailer"
            android:textSize="17sp"
            android:textColor="?attr/customTextHintColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/customViewColor"/>

        <TextView
            android:id="@+id/idDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>